sales/main/default/objects/Case/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <description>Reason for cancelling a subscription to Sage products</description>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Closed Business</fullName>
            </value>
            <value>
                <fullName>Moved to alternate accounting software</fullName>
            </value>
            <value>
                <fullName>Functionality/Features</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>