sales/main/default/objects/Case/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <description>Subcategory of Case and dependent on Case Category</description>
    <label>Case Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Case_Category__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>.NET API</fullName>
            </value>
            <value>
                <fullName>121 Remote</fullName>
            </value>
            <value>
                <fullName>3rd Party Integaration</fullName>
            </value>
            <value>
                <fullName>3rd Party Integration</fullName>
            </value>
            <value>
                <fullName>50c &gt; Capture</fullName>
            </value>
            <value>
                <fullName>50c &gt; Cloud Backups</fullName>
            </value>
            <value>
                <fullName>50c &gt; Contact</fullName>
            </value>
            <value>
                <fullName>50c &gt; One Drive</fullName>
            </value>
            <value>
                <fullName>Access Rights</fullName>
            </value>
            <value>
                <fullName>Access Rights / Permissions</fullName>
            </value>
            <value>
                <fullName>Accountant Dataset Manager</fullName>
            </value>
            <value>
                <fullName>Accounting/Payroll - Add/Upgrade a service</fullName>
            </value>
            <value>
                <fullName>Accounting/Payroll - Block/unblock</fullName>
            </value>
            <value>
                <fullName>Accounting/Payroll - Direct Debit Details</fullName>
            </value>
            <value>
                <fullName>Accounting/Payroll - Invoice</fullName>
            </value>
            <value>
                <fullName>Accounting/Payroll - No call checking account</fullName>
            </value>
            <value>
                <fullName>Accounting/Payroll - Request for change</fullName>
            </value>
            <value>
                <fullName>Accounting/Payroll - Sign in issue/browser compatibility</fullName>
            </value>
            <value>
                <fullName>Accounting/Payroll - Terminate Account</fullName>
            </value>
            <value>
                <fullName>Accounting/Payroll - Transfer</fullName>
            </value>
            <value>
                <fullName>Accounting/Payroll - Update on existing issue (give jira no)</fullName>
            </value>
            <value>
                <fullName>Accounting - Bank Feeds - Setup (Direct)</fullName>
            </value>
            <value>
                <fullName>Accounting - Bank Feeds - Setup (Yodlee)</fullName>
            </value>
            <value>
                <fullName>Accounting - Chart of accounts</fullName>
            </value>
            <value>
                <fullName>Accounting - Create/edit bank account</fullName>
            </value>
            <value>
                <fullName>Accounting - Customer/Supplier</fullName>
            </value>
            <value>
                <fullName>Accounting - Migration</fullName>
            </value>
            <value>
                <fullName>Accounting - Mobile</fullName>
            </value>
            <value>
                <fullName>Accounting – MTD</fullName>
            </value>
            <value>
                <fullName>Accounting - Opening balances</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>