sales/main/default/objects/Case/fields/Case_Category__c.field-meta.xml
<CustomField>
    <fullName>Case_Category__c</fullName>
    <description>Captures the current stage of the case.</description>
    <label>Case Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Customization</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Configuration</fullName>
            </value>
            <value>
                <fullName>Conversion</fullName>
            </value>
            <value>
                <fullName>Perfomance</fullName>
            </value>
            <value>
                <fullName>Data and Database</fullName>
            </value>
            <value>
                <fullName>Printing and Reporting</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Purchase Ledger</fullName>
            </value>
            <value>
                <fullName>Bank and Cash</fullName>
            </value>
            <value>
                <fullName>User Experience</fullName>
            </value>
            <value>
                <fullName>R&amp;D</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Accounting/Payroll - Administration</fullName>
            </value>
            <value>
                <fullName>Accounting/Payroll - Bank</fullName>
            </value>
            <value>
                <fullName>Accounting/Payroll - Bug</fullName>
            </value>
            <value>
                <fullName>Accounting/Payroll - Intelligence Reporting</fullName>
            </value>
            <value>
                <fullName>Accounting/Payroll - Processing</fullName>
            </value>
            <value>
                <fullName>Accounting/Payroll - Products &amp; Services</fullName>
            </value>
            <value>
                <fullName>Accounting/Payroll - PYE</fullName>
            </value>
            <value>
                <fullName>Accounting/Payroll - Setup</fullName>
            </value>
            <value>
                <fullName>Access</fullName>
            </value>
            <value>
                <fullName>Communications</fullName>
            </value>
            <value>
                <fullName>External Partners inc Deliveries/Returns</fullName>
            </value>
            <value>
                <fullName>Internal Systems</fullName>
            </value>
            <value>
                <fullName>People</fullName>
            </value>
            <value>
                <fullName>Policies/Processes</fullName>
            </value>
            <value>
                <fullName>Price/Value</fullName>
            </value>
            <value>
                <fullName>Product Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>