sales/main/default/objects/Case/fields/Customer_Lifecycle_Stage__c.field-meta.xml
<CustomField>
    <fullName>Customer_Lifecycle_Stage__c</fullName>
    <description>Where the customer is in the lifecycle of using the product</description>
    <label>Customer Lifecycle Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Trial</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Nurture</fullName>
            </value>
            <value>
                <fullName>Coming up for Renewal</fullName>
                <label>Renewal</label>
            </value>
            <value>
                <fullName>Opt out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>